--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -28,3 +28,8 @@ NEXT_PUBLIC_OG_IMAGE_URL=https://cdn.prod.website-files.com/65f04d74241a6c630354
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['tvl', 'coin_price','market_cap']
 NEXT_PUBLIC_HOMEPAGE_SHOW_AVG_BLOCK_TIME=false
 NEXT_PUBLIC_NETWORK_ICON=https://assets.website-files.com/65f04d74241a6c63035478fa/66676cddab06d0a5a813f660_style%3Dcustom.png
+
+NEXT_PUBLIC_AD_BANNER_PROVIDER=none
+NEXT_PUBLIC_AD_TEXT_PROVIDER=none
+FAVICON_GENERATOR_API_KEY=31976f462bf1773df52106d74cef3d0e41c066ba
+FAVICON_MASTER_URL=https://assets.website-files.com/65f04d74241a6c63035478fa/66676cddab06d0a5a813f660_style%3Dcustom.png
